# my-axum-starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cargo-generate.toml  config.toml  docker-compose.yml
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: main.rs
app/src/core/: config.rs  cors.rs  logging.rs  mod.rs  response.rs  state.rs
app/src/core/config/: cors.rs  mod.rs  redis.rs  secrets.rs
app/src/core/middleware/: auth.rs  mod.rs  request_id.rs
app/src/core/response/: api_response.rs  domain.rs  error.rs  reason.rs
app/src/core/state/: mod.rs
app/src/error/: auth.rs  config.rs  file_upload.rs  mod.rs  redis.rs  validation.rs
app/src/modules/: mod.rs  not_found.rs
app/src/modules/auth/: api.rs  mod.rs  service.rs
app/src/modules/docs/: mod.rs
app/src/modules/user/: handler.rs  mod.rs  service.rs
app/src/routes/: mod.rs
app/src/routes/v1/: mod.rs
app/src/shared/: from_state.rs  mod.rs
app/templates/: 404.html
config/: default.toml  development.toml  production.toml
entity/: Cargo.toml
entity/src/enums/: user_status.rs
