[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15.0", features = [
    "scalar",
    "macros",
    "axum-json",
    "axum-query",
    "axum",
    "axum-extra-headers",
    "axum-form",
    "axum-multipart",
] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout", "buffer", "limit"] }
tower-http = {version = "0.6.6", features = ["trace","cors","fs"]}
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
schemars = { version = "0.9.0", features = ["derive", "chrono04", "uuid1"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
serde_json = "1.0.140"
askama = "0.14.0"
thiserror = "2.0.12"
dotenvy = "0.15.7"
anyhow = "1.0.98"
